# simple-nes

./: .gitignore  .gitmodules  CMakeLists.txt  doc.md  readme.md
core/: CMakeLists.txt  apu.c  apu.h  bus.c  bus.h  cart.c  cart.h  cpu.c  cpu.h  dma.c  dma.h  libretro.c  mapper.c  mapper.h  ppu.c  ppu.h  types.h
core/mappers/: 246.c  MMC3.c  NROM.c  UxROM.c
doc/: doc.md
frontend/windows-frontend/: CMakeLists.txt  audio_sync.cc  audio_sync.h  logging.cc  logging.h  main.cc  simple_retro.cc  simple_retro.h
